--- a/SocialNetworkBE/src/main/resources/application.yaml
+++ b/SocialNetworkBE/src/main/resources/application.yaml
@@ -10,8 +10,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: phanvanthi315.1@gmail.com
-    password: iqrp lbwx cout goar
+    username: thuya4k26@gmail.com
+    password: lrkv ufyj rxlk dnnr
     properties:
       mail:
         smtp:
